fix text overflow container in ProjectDetailsPage

--- a/src/routes/ProjectDetailsPage/ProjectDetailsPage.scss
+++ b/src/routes/ProjectDetailsPage/ProjectDetailsPage.scss
@@ -24,6 +24,7 @@
 
   &__description {
     margin-bottom: 40px;
+    word-break: break-all;
   }
 
   &__links {
